[package]
name = "az-dbx-pat"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.1"
azure_core = "0.20.0"
azure_identity = "0.20.0"

[[bin]]
name = "az-dbx-pat"
path = "src/main.rs"
